# config-much

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: main.yml
example/: .clang-tidy  CMakeLists.txt  config.proto  main.cc  main.cpp
example/config/: config.yml  second.yml
include/: config-much.h
include/internal/: case-convert.h  parser-cli.h  parser-env.h  parser-error.h  parser-interface.h  parser-yaml.h
src/: config-much.cpp
src/internal/: case-convert.cpp  parser-env.cpp  parser-yaml.cpp
test/: CMakeLists.txt  TestCaseConverter.cpp  TestParser.cpp  TestParserEnv.cpp  TestParserYaml.cpp
test/proto/: test-config.proto
triplets/: x64-linux-devel.cmake
